[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/theme/fonts/font_practice_progress.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/theme/practice_progress_button.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/theme/practice_progress_separator.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/icons/arrow_right.png" type="Texture" id=5]
[ext_resource path="res://ui/icons/arrow_left.png" type="Texture" id=6]
[ext_resource path="res://ui/screens/practice/PracticeProgress.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.290196, 0.294118, 0.388235, 1 )
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="PracticeProgress" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 30.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 43.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="Button" parent="Layout"]
margin_right = 40.0
margin_bottom = 43.0
hint_tooltip = "Go to the previous practice."
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.188235, 0.188235, 0.286275, 1 )
custom_colors/font_color = Color( 0.960784, 0.980392, 0.980392, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
disabled = true
icon = ExtResource( 6 )
flat = true

[node name="VSeparator" type="VSeparator" parent="Layout"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 43.0
custom_styles/separator = ExtResource( 4 )

[node name="ListButton" type="Button" parent="Layout"]
margin_left = 48.0
margin_right = 1872.0
margin_bottom = 43.0
hint_tooltip = "Open the list of practices for this lesson."
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.188235, 0.188235, 0.286275, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Practice List"
flat = true

[node name="VSeparator2" type="VSeparator" parent="Layout"]
margin_left = 1872.0
margin_right = 1880.0
margin_bottom = 43.0
custom_styles/separator = ExtResource( 4 )

[node name="NextButton" type="Button" parent="Layout"]
margin_left = 1880.0
margin_right = 1920.0
margin_bottom = 43.0
hint_tooltip = "Go to the next practice."
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.188235, 0.188235, 0.286275, 1 )
custom_colors/font_color = Color( 0.960784, 0.980392, 0.980392, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
disabled = true
icon = ExtResource( 5 )
flat = true
